# microscopy-aesthetics-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/microscopy_aesthetics/: server.py
src/microscopy_aesthetics/ologs/: .gitkeep
tests/: run_tests.sh  test_server_template.py
